--- a/Start/attributes.html
+++ b/Start/attributes.html
@@ -18,7 +18,7 @@
 		class: 给元素指定一个或多个类名，方便通过 CSS 或 JavaScript 操作。<br />
 			<p class="text-muted">This is a paragraph.</p>
 		style: 直接为元素定义 CSS 样式。<br />
-			<span style="color: red;">This text is red.</span>
+			<span style="color: red;">This text is red.</span> <br />
 		href: 用于 &lt;a&gt; 标签，指定链接目标。<br />
 			<a href="https://www.example.com">Visit Example</a>
 		src: 用于 &lt;img&gt; 和 &lt;script&gt; 标签，指定资源的路径。<br />
@@ -28,9 +28,9 @@
 		title: 提供关于元素的额外信息，通常在鼠标悬停时显示。<br />
 			<button title="Click me">Submit</button>
 		name: 在 &lt;input&gt;, &lt;form&gt;, &lt;select&gt; 等表单元素中使用，定义元素的名称。<br />
-			<input type="text" name="username">
+			<input type="text" name="username"> <br />
 		value: 定义表单元素的值。<br />
-			<input type="text" value="Default text">
+			<input type="text" value="Default text"> <br />
 		target: 用于 &lt;a&gt; 标签，指定链接的打开方式（如 _blank 在新窗口中打开）。<br />
 			<a href="https://www.example.com" target="_blank" rel="noopener">Open in new tab</a>
 		type: 指定表单元素的类型（如 text, password, submit）。<br />
