--- a/Start/format_text.html
+++ b/Start/format_text.html
@@ -33,5 +33,59 @@ This is an example;
 This is an example;
 							This is an example;
 		</pre>
+		<code>computer output</code>
+		<br />
+		<kbd>keyboard putin</kbd>
+		<br />
+		<tt>printer text</tt>
+		<br />
+		<samp>sample of code</samp>
+		<br />
+		<var>vars of computer</var>
+		<br />
+		
+		<hr />
+		<address>
+			Written by <a href="mailto:webmaster@example.com">Jon Doe</a>.<br> 
+			Visit us at:<br>
+			Example.com<br>
+			Box 564, Disneyland<br>
+			USA
+		</address>
+		
+		<hr />
+		<abbr title="etcetera">etc.</abbr> this <b>tab</b> means abbreviation
+		<br />
+		<acronym title="World Wide Web">WWW</acronym>
+
+		<hr />
+		<p>the below text shows from right to right</p>  
+		<p><bdo dir="rtl">you can see the orden of this paragraph</bdo></p>  
+		<p><i><b>Bi-Directional Oerride 👆🏻 bdo 的意思是双向覆盖</b></i></p>
+
+		<hr />
+		<p>在这个示例中，第一个和第二个引用使用了 blockquote 标签，因为它们较长，需要独立的块来展示；而第三个引用使用了 q 标签，因为它比较短，可以内联显示。
+		</p>  
+			<blockquote>
+				<p>Life is what happens when you're busy making other plans.</p>
+				<footer>— John Lennon</footer>
+			</blockquote>
+		
+			<blockquote>
+				<p>If you want to know what a man's like, take a good look at how he treats his inferiors, not his equals.</p>
+				<footer>— J.K. Rowling, Harry Potter and the Goblet of Fire</footer>
+			</blockquote>
+		
+			<p>
+				In his famous quote, Einstein said: <q>E=mc²</q>
+			</p>
+			<blockquote>this is a <b>blockquote</b> test ..., I think it is like a tabulate</blockquote></blockquote>
+			<p>他说，<q>生活总是要继续的。 "q" means quote</q></p>
+
+			<blockquote>
+			“生活总是要继续的。”
+			<cite>— 某位哲人</cite>
+			</blockquote>
+
 	</body>
 </html>
