--- a/Start/format_text.html
+++ b/Start/format_text.html
@@ -86,6 +86,7 @@ This is an example;
 			“生活总是要继续的。”
 			<cite>— 某位哲人</cite>
 			</blockquote>
+			<p>My favorite color is <del>blue</del> <ins>green</ins>!</p>
 
 	</body>
 </html>
