--- a/Start/css.html
+++ b/Start/css.html
@@ -7,21 +7,21 @@
 
 	<body>
 
-		<div style="opacity:0.5;position:absolute;left:50px;width:300px;height:150px;background-color:#40B3DF"></div>
+		<div style="opacity:0.5;position:absolute;top:18px;left:18px;width:900px;height:158px;background-color:#40B3DF"></div>
 
-		<div style="font-family:verdana;padding:20px;border-radius:10px;border:10px solid #EE872A;">
+		<div style="font-family:verdana;padding:20px;border-radius:15px;border:10px solid #EE872A;">
 
-			<div style="opacity:0.3;position:absolute;left:120px;width:100px;height:200px;background-color:#8AC007"></div>
+			<div style="opacity:0.3;position:absolute;top:50px;left:30px;width:320px;height:110px;background-color:#8AC007"></div>
 
-			<h3>Look! Styles and colors</h3>	
+			<h3><b>Look! Styles and colors</b></h3>	
 
 			<div style="letter-spacing:12px;">Manipulate Text</div>
 
-			<div style="color:#40B3DF;">Colors
+			<div style="color:#6040df;">Colors
 				<span style="background-color:#B4009E;color:#ffffff;">Boxes</span>
 			</div>
 
-			<div style="color:#000000;">and more...</div>
+			<div style="color:#ff0000;">and more...</div>
 
 		</div>
 
