--- a/Start/css03.html
+++ b/Start/css03.html
@@ -9,12 +9,36 @@
 	<body>
 
 		<h1>Using outter css file to format text </h1>
+		<h2 style="background-color:red;">This is a h2 title</h2>
 		<p>Me tooooooooo!</p>
 		dsdfssdfsdfsdf
 		<blockquote>
 			This is a blockquote example.
 		</blockquote>
 
+		<pre style="color: black;">
+
+CSS 是在 HTML 4 开始使用的,是为了更好的渲染HTML元素而引入的.
+
+CSS 可以通过以下方式添加到HTML中:
+
+内联样式- 在HTML元素中使用"style" 属性
+内部样式表 -在HTML文档头部 &lt;head&gt; 区域使用&lt;style&gt; 元素 来包含CSS
+外部引用 - 使用外部 CSS 文件
+最好的方式是通过外部引用CSS文件
+
+CSS was started in HTML 4 and was introduced to better render HTML elements.
+CSS can be added to HTML in the following ways:
+Inline styles - using the "style" attribute in HTML elements
+Internal style sheet - Use the &lt;style&gt; element in the &lt;head&gt; area of the HTML document to include CSS
+External references - use external CSS files
+The best way is to reference the CSS file externally
+		</pre>
+		<p style="color:blue;margin-left:15px;">This is a paragraph.</p>
+		<hr />
+		<h1 style="font-family:verdana;">a title with different font style</h1>
+		<p style="font-family:arial;color:red;font-size:20px;">a paragraph with different font style</p>
+		<h1 style="text-align:center;">A title in the center</h1>
 	</body>
 
 </html>
