--- a/html/table04.html
+++ b/html/table04.html
@@ -6,6 +6,28 @@
 	</head>
 
 	<body>
-		
+		<h4>没有单元格边距:</h4>
+		<table border="1">
+			<tr>
+				<td>First</td>
+				<td>Row</td>
+			</tr>   
+			<tr>
+				<td>Second</td>
+				<td>Row</td>
+			</tr>
+		</table>
+
+		<h4>有单元格边距:</h4>
+		<table border="1" cellpadding="10">
+			<tr>
+				<td>First</td>
+				<td>Row</td>
+			</tr>   
+			<tr>
+				<td>Second</td>
+				<td>Row</td>
+			</tr>
+		</table>
 	</body>
 </html>
