--- a/html/table04.html
+++ b/html/table04.html
@@ -19,7 +19,7 @@
 		</table>
 
 		<h4>有单元格边距:</h4>
-		<table border="1" cellpadding="10">
+		<table border="1" cellpadding="100" cellspacing="30">
 			<tr>
 				<td>First</td>
 				<td>Row</td>
