--- a/html/block00.html
+++ b/html/block00.html
@@ -6,6 +6,33 @@
 	</head>
 
 	<body>
-		
+		<h1>HTML &lt;div&gt; 和 &lt;span&gt;</h1>
+		<hr />
+		<h2>HTML 区块元素 </h2>
+		大多数 HTML 元素被定义为<b>块级元素</b>
+		<p>HTML 可以通过 &lt;div&gt; 和 &lt;span&gt; 将元素组合起来</p>
+		实例: &lt;h1&gt; &lt;p&gt; &lt;ul&gt; &lt;table&gt;
+		<hr />
+		<h2>HTML 内联元素</h2>
+		内联元素在显示时通常不会以新航开始<br />
+		实例: &lt;b&gt; &lt;td&gt; &lt;a&gt; &lt;img&gt;
+		<hr />
+		<h2>HTML &lt;div&gt; 元素</h2>
+		<pre style="color: blueviolet;">
+<ul>
+	<li>HTML &lt;div&gt; 元素是块级元素，它可用于组合其他 HTML 元素的容器。</li>
+	<li>&lt;div&gt; 元素没有特定的含义。除此之外，由于它属于块级元素，浏览器会在其前后显示折行。</li>
+	<li>如果与 CSS 一同使用，&lt;div&gt; 元素可用于对大的内容块设置样式属性。</li>
+	<li>&lt;div&gt; 元素的另一个常见的用途是文档布局。它取代了使用表格定义布局的老式方法。使用 &lt;table&gt; 元素进行文档布局不是表格的正确用法.
+&lt;table&gt;元素的作用是显示表格化的数据。</li>
+</ul>
+		</pre>
+		<hr />
+		<h2>HTML &lt;span&gt; 元素</h2>
+		<p>HTML &lt;span&gt; 元素是内联元素, 可用作文本容器</p>
+		<p>&lt;span&gt; 元素也没有也定的含义</p>
+		<p>当与CSS 一同使用时, &lt;span&gt; 元素可用于为部分文本设置样式属性</p>
+		<em><strong>总而言之, &lt;div&gt; 是区块元素, 会产生换行. 而&lt;span&gt; 是内联元素, 不会产生换行</strong></em>
+		<hr />
 	</body>
 </html>
