--- a/html/character_entity00.html
+++ b/html/character_entity00.html
@@ -7,11 +7,24 @@
 
 	<body>
 		<h1>HTML character entity</h1>
-
+		<hr />
 		<p>greater than: &amp;gt; => "&gt;" </p>
 		<p>less than: &amp;lt; => "&lt;"</p>
 		<p>Non-breaking Space: &amp;nbsp => "&nbsp;"</p>
 		<p>&: &amp;amp; => "&"</p>
+
 		
+		<h1>URL 字符编码</h1>
+		<hr />
+		<pre style="color: brown;"><strong><big>
+URL 只能使用 ASCII 字符集.
+
+来通过因特网进行发送。由于 URL 常常会包含 ASCII 集合之外的字符,URL 必须转换为有效的 ASCII 格式。
+
+URL 编码使用 "%" 其后跟随两位的十六进制数来替换非 ASCII 字符。
+
+URL 不能包含空格。URL 编码通常使用 + 来替换空格。
+		</big></strong></pre>
+
 	</body>
 </html>
