--- a/html5/SVG.html
+++ b/html5/SVG.html
@@ -7,7 +7,43 @@
 	</head>
 
 	<body>
-
+		<h1>HTML5 SVG</h1>
+		<hr />
+			<p>
+				SVG 定义为可缩放矢量图形
+			</p>
+			<p>
+				HTML5支持 <strong style="color: blueviolet;"><em>内联SVG</em></strong>
+			</p>
+			<p>
+				HTML <b style="background-color: rgba(156, 150, 140, 0.765);">&lt;svg&gt;</b>
+				元素是 SVG 图形的容器
+			</p>
+			<p>
+				SVG 有多种绘制路径, 框, 圆, 文本和图形图像的方法
+			</p>
+		<h1>什么是SVG ?</h1>
+		<hr />
+			<ul>
+				<li>SVG (Scalable Vector Graphics) 可伸缩矢量图形</li>
+				<li>SVG 用于定义用于网络的基于矢量的图形</li>
+				<li>SVG 使用XML格式定义图形</li>
+				<li>SVG 图像在放大或改变尺寸的情况下其图形质量不会有损失</li>
+				<li>SVG 是万维网联盟的标准</li>
+			</ul>
+		<h1>SVG 的优势</h1>
+		<hr />
+			<p>与其他图像格式相比 (比如JPEG和GIF), 使用SVG的优势是:</p>
+			<ul>
+				<li>SVG 图像可通过文本编辑器来创建和修改</li>
+				<li>SVG 图像可以被搜索, 索引, 脚本化或压缩</li>
+				<li>SVG 是可伸缩的</li>
+				<li>SVG 图像可以在任何的分辨率下被高质量的打印</li>
+				<li>SVG 可在图像质量不下降的情况下被放大</li>
+			</ul>
+		<h1>把 SVG 直接嵌入 HTML 页面</h1>
+		<hr />
+			<p>在 HTML5 中, 我们可以将SVG元素直接嵌入 HTML 页面中</p>
 	</body>
 </html>
 
